remise en forme images

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
 
         	<div class="col-xs-12 col-sm-4 feature"> 
-      			<img src="images/nohandwashing.png" alt="nohandwashing" width="50" class="image">
+      			<img src="images/nohandwashing.PNG" alt="nohandwashing" width="50" class="image">
       				<p>
       					Vous ne disposez pas de point d'eau pour vos clients ?
                 Vous cherchez une solution simple et efficace pour leur offrir un service d'hygiène impeccable ?
@@ -79,14 +79,14 @@
       		</div>
 
       		<div class="col-xs-12 col-sm-4 feature">
-      			<img src="images/validation.png" alt="validation" width="50" class="image">
+      			<img src="images/validation.PNG" alt="validation" width="50" class="image">
               <p>
       				  Nous vous proposons un service adapté à vos besoins et à vos clients.
       		    </p>
       		</div>
 
       		<div class="col-xs-12 col-sm-4 feature">
-      		  <img src="images/maintenance.png" alt="maintenance" width="50" class="image">
+      		  <img src="images/maintenance.PNG" alt="maintenance" width="50" class="image">
       		    <p>
       				  Ne vous occupez plus de rien : nous assurons pour vous la maintenance et l'entretien des produits mis à disposition de vos clients dans vos espaces ! 
       		    </p>
